// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/lib/buildRelationReferences.js one word label 1`] = `
Array [
  Object {
    "destinationSchemaId": "12345",
    "identifiers": Object {
      "destination": Object {
        "alias": Object {
          "plural": Object {
            "camel": "directors",
            "kebab": "directors",
            "label": "Directors",
            "pascal": "Directors",
            "snake": "directors",
          },
          "singular": Object {
            "camel": "director",
            "kebab": "director",
            "label": "Director",
            "pascal": "Director",
            "snake": "director",
          },
        },
        "canonical": Object {
          "plural": Object {
            "camel": "users",
            "kebab": "users",
            "label": "Users",
            "pascal": "Users",
            "snake": "users",
          },
          "singular": Object {
            "camel": "user",
            "kebab": "user",
            "label": "User",
            "pascal": "User",
            "snake": "user",
          },
        },
      },
      "source": Object {
        "alias": Object {
          "plural": Object {
            "camel": "directedMovies",
            "kebab": "directed-movies",
            "label": "Directed Movies",
            "pascal": "DirectedMovies",
            "snake": "directed_movies",
          },
          "singular": Object {
            "camel": "directedMovie",
            "kebab": "directed-movie",
            "label": "Directed Movie",
            "pascal": "DirectedMovie",
            "snake": "directed_movie",
          },
        },
        "canonical": Object {
          "plural": Object {
            "camel": "movies",
            "kebab": "movies",
            "label": "Movies",
            "pascal": "Movies",
            "snake": "movies",
          },
          "singular": Object {
            "camel": "movie",
            "kebab": "movie",
            "label": "Movie",
            "pascal": "Movie",
            "snake": "movie",
          },
        },
      },
    },
    "sourceSchemaId": "45678",
    "type": "TO_ONE",
    "uuid": "0.5204492673675989",
  },
]
`;

exports[`/lib/inflateSchemasV2.js one word label 1`] = `
Array [
  Object {
    "attributes": Array [],
    "configuration": Object {},
    "id": "12345",
    "identifiers": Object {
      "plural": Object {
        "camel": "users",
        "kebab": "users",
        "label": "Users",
        "pascal": "Users",
        "snake": "users",
      },
      "singular": Object {
        "camel": "user",
        "kebab": "user",
        "label": "User",
        "pascal": "User",
        "snake": "user",
      },
    },
    "references": Array [
      Object {
        "destinationSchemaId": "12345",
        "identifiers": Object {
          "destination": Object {
            "alias": Object {
              "plural": Object {
                "camel": "directors",
                "kebab": "directors",
                "label": "Directors",
                "pascal": "Directors",
                "snake": "directors",
              },
              "singular": Object {
                "camel": "director",
                "kebab": "director",
                "label": "Director",
                "pascal": "Director",
                "snake": "director",
              },
            },
            "canonical": Object {
              "plural": Object {
                "camel": "users",
                "kebab": "users",
                "label": "Users",
                "pascal": "Users",
                "snake": "users",
              },
              "singular": Object {
                "camel": "user",
                "kebab": "user",
                "label": "User",
                "pascal": "User",
                "snake": "user",
              },
            },
          },
          "source": Object {
            "alias": Object {
              "plural": Object {
                "camel": "directedMovies",
                "kebab": "directed-movies",
                "label": "Directed Movies",
                "pascal": "DirectedMovies",
                "snake": "directed_movies",
              },
              "singular": Object {
                "camel": "directedMovie",
                "kebab": "directed-movie",
                "label": "Directed Movie",
                "pascal": "DirectedMovie",
                "snake": "directed_movie",
              },
            },
            "canonical": Object {
              "plural": Object {
                "camel": "movies",
                "kebab": "movies",
                "label": "Movies",
                "pascal": "Movies",
                "snake": "movies",
              },
              "singular": Object {
                "camel": "movie",
                "kebab": "movie",
                "label": "Movie",
                "pascal": "Movie",
                "snake": "movie",
              },
            },
          },
        },
        "sourceSchemaId": "45678",
        "type": "TO_ONE",
        "uuid": "0.10710167496012413",
      },
    ],
    "relations": Array [],
  },
  Object {
    "attributes": Array [
      Object {
        "datatype": "STRING",
        "datatypeOptions": Object {},
        "default_value": "string",
        "description": "the name of the user",
        "id": "name-attr",
        "identifier": "name",
        "label": "Name",
        "locked": false,
        "required": true,
        "unique": true,
      },
      Object {
        "datatype": "STRING",
        "datatypeOptions": Object {},
        "default_value": "string",
        "description": "the email of the user",
        "id": "email-attr",
        "identifier": "email",
        "label": "Email",
        "locked": false,
        "required": true,
        "unique": true,
      },
    ],
    "configuration": Object {},
    "id": "45678",
    "identifiers": Object {
      "plural": Object {
        "camel": "movies",
        "kebab": "movies",
        "label": "Movies",
        "pascal": "Movies",
        "snake": "movies",
      },
      "singular": Object {
        "camel": "movie",
        "kebab": "movie",
        "label": "Movie",
        "pascal": "Movie",
        "snake": "movie",
      },
    },
    "references": Array [],
    "relations": Array [
      Object {
        "as": "Director",
        "id": "relation-example-01",
        "related_schema_id": "12345",
        "required": false,
        "reverse_as": "Directed Movie",
        "reverse_relation_id": "string",
        "schema_id": "45678",
        "type": "BELONGS_TO",
      },
    ],
  },
]
`;
